--- a/microservices/docker-compose.yml
+++ b/microservices/docker-compose.yml
@@ -206,6 +206,9 @@ services:
       - inventory-service
       - orders-service
       - shipping-service
+    volumes:
+      - ./api-gateway:/app
+      - ./frontend:/frontend
 
 volumes:
   auth_db_data:
